--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
 
     <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
 
     <title>Homura by saxsir</title>
   </head>
@@ -30,27 +30,47 @@
         <section id="main-content">
           <h1>人工無脳をつくってみた</h1>
 
-<h2>実行コマンド</h2>
+	  <h2>実行コマンド</h2>
 
-<p>$ ruby bin/munou</p>
+	  <p>$ ruby bin/munou</p>
 
-<h2>概要</h2>
+	  <h2>概要</h2>
 
-<p>Rubyで人工無脳をつくってみたよ。<br>
-命名は分かる人には分かる...というかわかりますよね。<br>
-最近はまったアニメの登場キャラクターです。</p>
+	  <p>Rubyで人工無脳をつくってみたよ。<br>
+	    命名は分かる人には分か...りますよね。<br>
+	    最近ハマったアニメの登場キャラクターです。</p>
 
-<p>実行コマンド打ったあとは、普通に会話を楽しんでみてください。（会話にならないけど）</p>
+	  <p>実行コマンド打ったあとは、普通に会話を楽しんでみてください。<br>
+	    ※あまり会話にならないけど...</p>
 
-<p>ちなみに下記の図書を参考にしました。（Amazonにリンクします）</p>
+	  <p>ちなみに下記の図書を参考にしました。（Amazonにリンクします）</p>
 
-<p>参考図書:
-<a href="http://www.amazon.co.jp/gp/product/4839917299/ref=as_li_ss_tl?ie=UTF8&amp;tag=saxsir-22&amp;linkCode=as2&amp;camp=247&amp;creative=7399&amp;creativeASIN=4839917299">恋するプログラム―Rubyでつくる人工無脳</a><img src="http://www.assoc-amazon.jp/e/ir?t=saxsir-22&amp;l=as2&amp;o=9&amp;a=4839917299" width="1" height="1" border="0" alt=""></p>
+	  <p>参考図書:
+	    <a href="http://www.amazon.co.jp/gp/product/4839917299/ref=as_li_ss_tl?ie=UTF8&amp;tag=saxsir-22&amp;linkCode=as2&amp;camp=247&amp;creative=7399&amp;creativeASIN=4839917299">恋するプログラム―Rubyでつくる人工無脳</a><img src="http://www.assoc-amazon.jp/e/ir?t=saxsir-22&amp;l=as2&amp;o=9&amp;a=4839917299" width="1" height="1" border="0" alt=""></p>
 
-<h2>推奨環境</h2>
+	  <h2>特徴</h2>
+	  <p>返答パターンが3種類あります</p>
+	  <ul>
+	    <li>What: ｛入力内容｝ってなに？と返答する</li>
+	    <li>Random: lib/dics/random.txt の中身からランダムに選択し、返答する</li>
+	    <li>Pattern: ある条件を満たすと発言が変わる（可能性がある）。結構レアだからこの返答がくるとうれしい</li>
+	  </ul>
 
-<p>ruby 1.9系以上<br>
-たぶん1.8系でも普通に動く気がします。（未検証）</p>
+	  <p>会話すればするほど賢く(?)なる</p>
+	  <ul>
+	    <li>会話をすべて覚えているので、返答パターンがどんどん増えていきます</li>
+	    <li>でも正常終了(なにも入力せずにEnter)しないと記憶しません.</li>
+	  </ul>
+
+
+	  <h2>推奨環境</h2>
+
+	  <p>ruby 1.9系以上<br>
+	    たぶん1.8系でも普通に動く気がします。（未検証）</p>
+	  
+	  <h2>Contact</h2>
+	  <p>なにかありましたら<address>@Shohei_sasa</adress>までご連絡ください</p>
+	  
         </section>
 
         <aside id="sidebar">
@@ -69,7 +89,5 @@
         </aside>
       </div>
     </div>
-
-  
   </body>
 </html>
